fixed alignment in the header

--- a/ComicViewer.Web/ClientApp/src/app/app.component.less
+++ b/ComicViewer.Web/ClientApp/src/app/app.component.less
@@ -15,6 +15,10 @@
   margin-right: auto;
 }
 
+.title-text {
+  flex: 1 1 auto;
+}
+
 .search-bar {
 
 }
